feat/schedule-002 - create appointment workflow fix migration sql