@@ -1,7 +1,6 @@
 package com.barbershop.schedule.api.resource;
 
 import com.barbershop.schedule.api.response.DiaryResponse;
-import com.barbershop.schedule.core.entity.Diary;
 import com.barbershop.schedule.core.service.DiaryService;
 import lombok.AllArgsConstructor;
 import lombok.extern.log4j.Log4j2;
@@ -11,6 +10,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.barbershop.schedule.core.entity.enums.StatusProcess.NEW;
 
@@ -29,7 +29,7 @@ public class WeekGenerateResource {
 
     @GetMapping(produces = "application/json")
     public List<DiaryResponse> getWeeks(){
-        return diaryService.getCurrentWeeks().stream().map(DiaryResponse::getResponse).toList();
+        return diaryService.getCurrentWeeks().stream().map(DiaryResponse::getResponse).collect(Collectors.toList());
     }
 
 }
